tg-989 agrega icon a tabs

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -6,13 +6,21 @@
 	<mat-card class="mat-typography">
 		<mat-card-content>
 			<mat-tab-group>
-				<mat-tab label="{{ 'ambulatoria.paciente.resumen.TITLE' | translate }}">
+				<mat-tab>
+					<ng-template mat-tab-label>
+						<mat-icon>content_paste</mat-icon>
+						<span>{{ 'ambulatoria.paciente.resumen.TITLE' | translate | uppercase }}</span>
+					</ng-template>
 					<ng-template matTabContent>
 						<app-resumen></app-resumen>
 					</ng-template>
 				</mat-tab>
 
-				<mat-tab label="{{ 'ambulatoria.paciente.problemas.TITLE' | translate }}">
+				<mat-tab>
+					<ng-template mat-tab-label>
+						<mat-icon>content_paste</mat-icon>
+						<span>{{ 'ambulatoria.paciente.problemas.TITLE' | translate | uppercase }}</span>
+					</ng-template>
 					<ng-template matTabContent>
 						<app-problemas></app-problemas>
 					</ng-template>
