--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -74,7 +74,7 @@
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
-						<app-antecedentes-familiares-summary [internmentEpisodeId]="internmentEpisodeId">
+						<app-antecedentes-familiares-summary [familyHistories]="familyHistories">
 						</app-antecedentes-familiares-summary>
 					</ng-container>
 				</div>
@@ -103,7 +103,8 @@
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
 						<app-alergias-summary [internmentEpisodeId]="internmentEpisodeId"
-											  [editable]="epicrisisDoc?.confirmed">
+											  [editable]="epicrisisDoc?.confirmed"
+											  [alergies]="alergies">
 						</app-alergias-summary>
 					</ng-container>
 					<ng-container
