--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -9,20 +9,10 @@
 				<mat-tab>
 					<ng-template mat-tab-label>
 						<mat-icon>content_paste</mat-icon>
-						<span>{{ 'ambulatoria.paciente.resumen.TITLE' | translate | uppercase }}</span>
+						<span>{{ 'ambulatoria.paciente.resumen.TAB-LABEL' | translate | uppercase }}</span>
 					</ng-template>
 					<ng-template matTabContent>
 						<app-resumen></app-resumen>
-					</ng-template>
-				</mat-tab>
-
-				<mat-tab>
-					<ng-template mat-tab-label>
-						<mat-icon>content_paste</mat-icon>
-						<span>{{ 'ambulatoria.paciente.problemas.TITLE' | translate | uppercase }}</span>
-					</ng-template>
-					<ng-template matTabContent>
-						<app-problemas></app-problemas>
 					</ng-template>
 				</mat-tab>
 			</mat-tab-group>
