--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -59,22 +59,24 @@
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
 						<app-signos-vitales-summary [internmentEpisodeId]="internmentEpisodeId"
-													[editable]="epicrisisDoc?.confirmed">
+							[editable]="epicrisisDoc?.confirmed">
 						</app-signos-vitales-summary>
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
 						<app-antropometricos-summary [internmentEpisodeId]="internmentEpisodeId"
-													 [editable]="epicrisisDoc?.confirmed">
+							[editable]="epicrisisDoc?.confirmed">
 						</app-antropometricos-summary>
 					</ng-container>
-					<ng-container *hasRole="['ESPECIALISTA_MEDICO','ENFERMERO','PROFESIONAL_DE_SALUD','ENFERMERO_ADULTO_MAYOR']">
+					<ng-container
+						*hasRole="['ESPECIALISTA_MEDICO','ENFERMERO','PROFESIONAL_DE_SALUD','ENFERMERO_ADULTO_MAYOR']">
 						<app-antecedentes-personales-summary [internmentEpisodeId]="internmentEpisodeId">
 						</app-antecedentes-personales-summary>
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
-						<app-antecedentes-familiares-summary [familyHistories]="familyHistories">
+						<app-antecedentes-familiares-summary [familyHistories]="familyHistories"
+							[familyHistoriesHeader]="familyHistoriesHeader">
 						</app-antecedentes-familiares-summary>
 					</ng-container>
 				</div>
@@ -97,14 +99,14 @@
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
-						<app-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId" [editable]="!epicrisisDoc && editDiagnosisSummary$">
+						<app-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId"
+							[editable]="!epicrisisDoc && editDiagnosisSummary$">
 						</app-diagnosis-summary>
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
 						<app-alergias-summary [internmentEpisodeId]="internmentEpisodeId"
-											  [editable]="epicrisisDoc?.confirmed"
-											  [alergies]="alergies">
+							[editable]="epicrisisDoc?.confirmed" [alergies]="alergies">
 						</app-alergias-summary>
 					</ng-container>
 					<ng-container
@@ -114,7 +116,7 @@
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
 						<app-vacunas-summary [internmentEpisodeId]="internmentEpisodeId"
-											 [editable]="epicrisisDoc?.confirmed"></app-vacunas-summary>
+							[editable]="epicrisisDoc?.confirmed"></app-vacunas-summary>
 					</ng-container>
 				</div>
 			</div>
