tg-1000 modify interment episode summary component to show probable discharge date

--- a/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.html
@@ -37,7 +37,12 @@
 		</div>
 		<div mat-line>
 			<span 	[translate]="'internaciones.internacion-paciente.card.ADMISSION'"
-					  [translateParams]="{ datetime: internmentEpisode?.admissionDatetime }">
+					[translateParams]="{ datetime: internmentEpisode?.admissionDatetime }">
+			</span>
+		</div>
+		<div mat-line>
+			<span 	[translate]="'internaciones.internacion-paciente.card.PROBABLE_DISCHARGE'"
+					[translateParams]="{ datetime: internmentEpisode?.probableDischargeDate }">
 			</span>
 		</div>
 	</mat-list-item>
