--- a/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.html
@@ -14,7 +14,7 @@
 				</button>
 			</div>
 		</ng-container>
-		<ng-container *ngIf="!editable">
+		<ng-container *ngIf="editable">
 			<button mat-icon-button *hasRole="canEdit" (click)="openInNew.emit()">
 				<mat-icon fontSet="material-icons-outlined">open_in_new</mat-icon>
 			</button>
