--- a/front-end/webapp/src/app/modules/historia-clinica/components/alergias-summary/alergias-summary.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/components/alergias-summary/alergias-summary.component.html
@@ -2,7 +2,7 @@
 				  [canEdit]="['ENFERMERO_ADULTO_MAYOR', 'ESPECIALISTA_MEDICO']"
 				  [editable]="editable"
 				  (openInNew)="openDialog()">
-	<app-table [model]="tableModel" *ngIf="tableModel?.data.length > 0 else noInfo"></app-table>
+	<app-table [model]="tableModel" *ngIf="tableModel?.data?.length > 0 else noInfo"></app-table>
 	<ng-template #noInfo>
 		<app-no-data></app-no-data>
 	</ng-template>
