--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -106,7 +106,7 @@
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
 						<app-alergias-summary [internmentEpisodeId]="internmentEpisodeId"
-							[editable]="epicrisisDoc?.confirmed" [alergies]="alergies">
+							[editable]="epicrisisDoc?.confirmed" [allergies]="allergies">
 						</app-alergias-summary>
 					</ng-container>
 					<ng-container
