--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -70,12 +70,13 @@
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO','ENFERMERO','PROFESIONAL_DE_SALUD','ENFERMERO_ADULTO_MAYOR']">
-						<app-antecedentes-personales-summary [internmentEpisodeId]="internmentEpisodeId">
+						<app-antecedentes-personales-summary [internmentEpisodeId]="internmentEpisodeId"
+							[personalHistory]="personalHistory$ | async">
 						</app-antecedentes-personales-summary>
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
-						<app-antecedentes-familiares-summary [familyHistories]="familyHistories"
+						<app-antecedentes-familiares-summary [familyHistories]="familyHistories$ | async"
 							[familyHistoriesHeader]="familyHistoriesHeader">
 						</app-antecedentes-familiares-summary>
 					</ng-container>
@@ -106,7 +107,7 @@
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
 						<app-alergias-summary [internmentEpisodeId]="internmentEpisodeId"
-							[editable]="!epicrisisDoc?.confirmed" [allergies]="allergies">
+							[editable]="!epicrisisDoc?.confirmed" [allergies]="allergies$ | async">
 						</app-alergias-summary>
 					</ng-container>
 					<ng-container
