--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/resumen/resumen.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/resumen/resumen.component.html
@@ -1,24 +1,31 @@
 <app-content width="full">
 	<section>
 		<h2 class="page-title" [translate]="'ambulatoria.paciente.resumen.TITLE'"></h2>
-		<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
-			<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
+		<div fxLayout="column" fxLayoutGap="20px">
+			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
 
-			</div>
-			<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
-				
-			</div>
-		</div>
-		<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
-			<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
+				</div>
+				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
 
+				</div>
 			</div>
-			<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
-				<ng-container
-					*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
-					<app-alergias-summary [allergies]="allergies$ | async">
-					</app-alergias-summary>
-				</ng-container>
+			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
+					<ng-container
+						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
+						<app-antecedentes-familiares-summary [familyHistories]="familyHistories$ | async"
+						                                     [familyHistoriesHeader]="familyHistoriesHeader">
+						</app-antecedentes-familiares-summary>
+					</ng-container>
+				</div>
+				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
+					<ng-container
+						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
+						<app-alergias-summary [allergies]="allergies$ | async">
+						</app-alergias-summary>
+					</ng-container>
+				</div>
 			</div>
 		</div>
 	</section>
