--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/resumen/resumen.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/resumen/resumen.component.html
@@ -4,20 +4,22 @@
 		<div fxLayout="column" fxLayoutGap="20px">
 			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
-
+					<app-antecedentes-personales-summary
+						[personalHistory]="personalHistory$ | async">
+					</app-antecedentes-personales-summary>
 				</div>
-				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
-
-				</div>
-			</div>
-			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
 						<app-antecedentes-familiares-summary [familyHistories]="familyHistories$ | async"
-						                                     [familyHistoriesHeader]="familyHistoriesHeader">
+							[familyHistoriesHeader]="familyHistoriesHeader">
 						</app-antecedentes-familiares-summary>
 					</ng-container>
+				</div>
+			</div>
+			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
+
 				</div>
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
 					<ng-container
