--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -59,19 +59,18 @@
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
 						<app-signos-vitales-summary [internmentEpisodeId]="internmentEpisodeId"
-													[editable]="!epicrisisDoc?.confirmed">
+							[editable]="!epicrisisDoc?.confirmed">
 						</app-signos-vitales-summary>
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
 						<app-antropometricos-summary [internmentEpisodeId]="internmentEpisodeId"
-													 [editable]="!epicrisisDoc?.confirmed">
+							[editable]="!epicrisisDoc?.confirmed">
 						</app-antropometricos-summary>
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO','ENFERMERO','PROFESIONAL_DE_SALUD','ENFERMERO_ADULTO_MAYOR']">
-						<app-antecedentes-personales-summary [internmentEpisodeId]="internmentEpisodeId"
-							[personalHistory]="personalHistory$ | async">
+						<app-antecedentes-personales-summary [personalHistory]="personalHistory$ | async">
 						</app-antecedentes-personales-summary>
 					</ng-container>
 					<ng-container
