tg-1032 agrega tooltip a summary-card

--- a/front-end/webapp/src/app/modules/historia-clinica/components/alergias-summary/alergias-summary.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/components/alergias-summary/alergias-summary.component.html
@@ -1,4 +1,5 @@
 <app-summary-card [header]="alergiasSummary"
+                  [tooltip]="'historia-clinica.summary-card.alergias.TOOLTIP'"
 				  [canEdit]="['ENFERMERO_ADULTO_MAYOR', 'ESPECIALISTA_MEDICO']"
 				  [editable]="editable"
 				  (openInNew)="openDialog()">
