--- a/front-end/webapp/src/app/modules/historia-clinica/components/signos-vitales-summary/signos-vitales-summary.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/components/signos-vitales-summary/signos-vitales-summary.component.html
@@ -1,4 +1,5 @@
 <app-summary-card [header]="signosVitalesSummary"
+                  [tooltip]="'historia-clinica.summary-card.signos-vitales.TOOLTIP'"
 				  [canEdit]="['ENFERMERO', 'ENFERMERO_ADULTO_MAYOR', 'ESPECIALISTA_MEDICO']"
 				  [editable]="editable"
 				  (openInNew)="openDialog()">
