--- a/front-end/webapp/src/app/modules/historia-clinica/components/antropometricos-summary/antropometricos-summary.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/components/antropometricos-summary/antropometricos-summary.component.html
@@ -1,4 +1,5 @@
 <app-summary-card [header]="antropometricosSummary"
+                  [tooltip]="'historia-clinica.summary-card.datos-antropometricos.TOOLTIP'"
 				  [canEdit]="['ENFERMERO', 'ENFERMERO_ADULTO_MAYOR', 'ESPECIALISTA_MEDICO']"
 				  [editable]="editable"
 				  (openInNew)="openDialog()">
