--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/resumen/resumen.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/resumen/resumen.component.html
@@ -4,8 +4,7 @@
 		<div fxLayout="column" fxLayoutGap="20px">
 			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
-					<app-antecedentes-personales-summary
-						[personalHistory]="personalHistory$ | async">
+					<app-antecedentes-personales-summary [personalHistory]="personalHistory$ | async">
 					</app-antecedentes-personales-summary>
 				</div>
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
@@ -19,7 +18,10 @@
 			</div>
 			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
-
+					<ng-container
+						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
+						<app-medicacion-summary [medications]="medications$ | async"></app-medicacion-summary>
+					</ng-container>
 				</div>
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
 					<ng-container
