--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/resumen/resumen.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/resumen/resumen.component.html
@@ -1,6 +1,6 @@
 <app-content width="full">
 	<section>
-		<h2 class="page-title" [translate]="'ambulatoria.paciente.resumen.TITLE'"></h2>
+		<h2 [translate]="'ambulatoria.paciente.resumen.TITLE'"></h2>
 		<div fxLayout="column" fxLayoutGap="20px">
 			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
@@ -28,6 +28,15 @@
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
 						<app-alergias-summary [allergies]="allergies$ | async">
 						</app-alergias-summary>
+					</ng-container>
+				</div>
+			</div>
+			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
+					<ng-container
+						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
+						<app-signos-vitales-summary [editable]="false" [vitalSigns$]="vitalSigns$">
+						</app-signos-vitales-summary>
 					</ng-container>
 				</div>
 			</div>
