--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -59,7 +59,7 @@
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
 						<app-signos-vitales-summary [internmentEpisodeId]="internmentEpisodeId"
-							[editable]="!epicrisisDoc?.confirmed">
+							[editable]="!epicrisisDoc?.confirmed" [vitalSigns$]="vitalSigns$">
 						</app-signos-vitales-summary>
 					</ng-container>
 					<ng-container
@@ -116,8 +116,8 @@
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
 						<app-vacunas-summary [internmentEpisodeId]="internmentEpisodeId"
-						                     [inmunizations]="inmunizations$ | async"
-											 [editable]="!epicrisisDoc?.confirmed"></app-vacunas-summary>
+							[inmunizations]="inmunizations$ | async" [editable]="!epicrisisDoc?.confirmed">
+						</app-vacunas-summary>
 					</ng-container>
 				</div>
 			</div>
