tg-1044 Abstrae Card de Información Antropometrica

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -64,7 +64,7 @@
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
-						<app-antropometricos-summary [internmentEpisodeId]="internmentEpisodeId"
+						<app-antropometricos-summary [internmentEpisodeId]="internmentEpisodeId" [anthropometricData$]="anthropometricData$"
 							[editable]="!epicrisisDoc?.confirmed">
 						</app-antropometricos-summary>
 					</ng-container>
