--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/resumen/resumen.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/resumen/resumen.component.html
@@ -34,6 +34,13 @@
 			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
 					<ng-container
+						*hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
+						<app-antropometricos-summary [anthropometricData$]="anthropometricData$">
+						</app-antropometricos-summary>
+					</ng-container>
+				</div>
+				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
+					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
 						<app-signos-vitales-summary [editable]="false" [vitalSigns$]="vitalSigns$">
 						</app-signos-vitales-summary>
