tg-996 Implementar pantalla con formulario para suministrar vacuna

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
@@ -3,16 +3,16 @@
 		<div id="title">
 			<h2 [translate]="'ambulatoria.paciente.vacunas.TITLE'"></h2>
 		</div>
-		<div id="add_button" *ngIf="false">
+		<div id="add_button">
 			<button mat-flat-button color="primary" (click)=goToAplicarVacuna()>
 				<span>{{'ambulatoria.paciente.vacunas.ADD' | translate | uppercase }}</span>
 			</button>
 		</div>
 	</div>
 
-	<div fxLayout="row">
+	<div fxLayout="row" fxLayoutGap="20px">
 		<div fxFlex="50">
-			<app-vacunas-summary [internmentEpisodeId]="22"
+			<app-vacunas-summary [inmunizations]="inmunizations$ | async"
 			                     [editable]="false">
 			</app-vacunas-summary>
 		</div>
