tg-1061. [P1] La funcionalidad de carga de la fecha probable no debería estar habilitada para geriatricos
(cherry picked from commit acaca0327c2eb99a8235eafb547d2934f8d059fd)

--- a/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.html
@@ -40,7 +40,7 @@
 					[translateParams]="{ datetime: internmentEpisode?.admissionDatetime }">
 			</span>
 		</div>
-		<div mat-line>
+		<div mat-line *ngIf="canLoadProbableDischargeDate">
 			<span 	[translate]="'internaciones.internacion-paciente.card.PROBABLE_DISCHARGE'"
 					[translateParams]="{ datetime: internmentEpisode?.probableDischargeDate }">
 			</span>
