--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -85,10 +85,10 @@
 						*hasRole="['ADMINISTRATIVO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO']">
 						<app-summary-card 	[header]="internacionSummary"
 										  	[canEdit]="['ESPECIALISTA_MEDICO']"
-				  						  	[editable]="!hasMedicalDischarge"
+				  						  	[editable]="!hasMedicalDischarge && canLoadProbableDischargeDate"
 											(openInNew)="openDialog()">
 							<mat-card-content>
-								<app-internment-episode-summary [internmentEpisode]="internmentEpisodeSummary">
+								<app-internment-episode-summary [internmentEpisode]="internmentEpisodeSummary" [canLoadProbableDischargeDate]="canLoadProbableDischargeDate">
 								</app-internment-episode-summary>
 							</mat-card-content>
 						</app-summary-card>
