--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/patient-profile/patient-profile.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/patient-profile/patient-profile.component.html
@@ -2,7 +2,7 @@
 	<section>
 		<div>
 			<button mat-raised-button color="primary" (click)="goToAmbulatoria()">
-				<span [translate]="'ambulatoria.paciente.profile.BUTTON_HISTORIA_CLINICA'"></span>
+				<span class="uppercase" [translate]="'ambulatoria.paciente.profile.BUTTON_HISTORIA_CLINICA'"></span>
 			</button>
 		</div>
 		<div class="profile-card">
