--- a/front-end/webapp/src/app/modules/presentation/components/patient-card/patient-card.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/patient-card/patient-card.component.scss
@@ -5,6 +5,8 @@ mat-card.mat-card {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	padding-left: 25px;
+	padding-right: 25px;
 }
 
 mat-card-header {
