--- a/front-end/webapp/src/app/modules/presentation/components/main-layout/main-layout.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/main-layout/main-layout.component.scss
@@ -31,16 +31,31 @@ app-bar {
 		}
 	}
 
-	.custom-container  {
+	.custom-container {
 		height: 100%;
-		display: flex ;
-		flex-direction: column ;
-		justify-content: space-between ;
-		.informative-items{
-			display: flex ;
-			flex-direction: column ;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+
+		.informative-items {
+			background-color: #fafafa;
+			display: flex;
+			flex-direction: column;
+			font-weight: 500;
+			padding: 1vh 0 0 0;
 			text-align: center;
-			button{
+
+			.mat-divider {
+				margin: 0.5vh 0;
+			}
+
+			.address {
+				color: #939393;
+				font-size: 13px;
+				font-weight: 400;
+			}
+
+			button {
 				width: auto;
 				color: red;
 				border-radius: 4px;
@@ -50,7 +65,7 @@ app-bar {
 }
 
 mat-sidenav {
-    max-width: 204px;
+	max-width: 204px;
 }
 
 .layout-is-mobile {
