tg-1103 cargar datos de paciente en card en ambulatoria-paciente

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -4,7 +4,7 @@
 	</section>
 
 	<div fxLayout="column" fxLayoutGap="20px">
-		<app-patient-card [patient]="mockedPatient">
+		<app-patient-card [patient]="patient$ | async">
 			<div horizontal-content>
 				<button mat-flat-button color="primary">
 					{{ 'ambulatoria.paciente.card.NUEVA_CONSULTA' | translate | uppercase }}
