--- a/front-end/webapp/src/app/modules/presentation/components/patient-card/patient-card.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/patient-card/patient-card.component.html
@@ -1,19 +1,21 @@
-<mat-card>
+<mat-card id="patient_card">
 	<ng-content select="[header]"></ng-content>
-	<div fxLayout="row" fxLayoutAlign="space-between">
+	<div id="layout_header" fxLayout="row" fxLayoutAlign="space-between">
 		<mat-card-header>
-			<div mat-card-avatar class="header-image"></div>
+			<div id="avatar" mat-card-avatar class="header-image"></div>
 			<mat-card-title>
-				<span class="capitalize">{{ patient?.firstName }} {{patient?.lastName}}</span>
-				<span class="uppercase">ID {{patient?.id}}</span>
+				<span id="title" class="capitalize">
+					{{ patient?.firstName }} {{patient?.middleNames}} {{patient?.lastName}} {{patient?.otherLastNames}}
+				</span>
+				<span id="patient_id" class="uppercase">ID {{patient?.id}}</span>
 			</mat-card-title>
 			<mat-card-subtitle>
-				<span [translate]=viewGenderAge()></span>
+				<span id="gender_age" [translate]=viewGenderAge()></span>
 			</mat-card-subtitle>
 		</mat-card-header>
-		<ng-content select="[horizontal-content]"></ng-content>
+		<ng-content id="horizontal_content" select="[horizontal-content]"></ng-content>
 	</div>
 	<mat-card-content>
-		<ng-content select="[content]"></ng-content>
+		<ng-content id="vertical_content" select="[content]"></ng-content>
 	</mat-card-content>
 </mat-card>
