--- a/front-end/webapp/src/app/modules/historia-clinica/components/antecedentes-personales-summary/antecedentes-personales-summary.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/components/antecedentes-personales-summary/antecedentes-personales-summary.component.html
@@ -1,4 +1,4 @@
-<app-summary-card [header]="antecedentesPersonalesSummary">
+<app-summary-card [header]="personalHistoriesHeader">
 	<app-table [model]="tableModel" *ngIf="tableModel?.data?.length > 0 else noInfo"></app-table>
 	<ng-template #noInfo>
 		<app-no-data></app-no-data>
