--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/resumen/resumen.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/resumen/resumen.component.html
@@ -4,7 +4,8 @@
 		<div fxLayout="column" fxLayoutGap="20px">
 			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
-					<app-antecedentes-personales-summary [personalHistory]="personalHistory$ | async">
+					<app-antecedentes-personales-summary [personalHistory]="personalHistory$ | async"
+						[personalHistoriesHeader]="personalProblemsHeader">
 					</app-antecedentes-personales-summary>
 				</div>
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
